# Dict-CLI

./: .gitignore  README.md  pyproject.toml
dict_cli/: __init__.py  main.py
