[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youdao-dict"
version = "1.0.0"
description = "A CLI dictionary tool using Youdao API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
dict = "dict_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dict_cli*"]
